--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   },
   "homepage": "https://github.com/gSchool/fs-pet-shop#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.14",
+    "httpie": "^1.1.2",
+    "morgan": "^1.10.0",
     "nodemon": "^1.9.1"
   }
 }
