--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.14",
     "httpie": "^1.1.2",
     "morgan": "^1.10.0",
-    "nodemon": "^1.9.1"
+    "nodemon": "^1.9.1",
+    "pg": "^8.9.0"
   }
 }
